--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Roboto', sans-serif; /* Use a fonte escolhida */
+  scroll-behavior: smooth;
 
 
 }
